==> afranko/ans_box/src/edge_comm/GSM_MQTT.c <==
#include "edge_comm/GSM_MQTT.h"

void begin(GSM_MQTT* object)
{
	/* Enable IT to receive data */
	if(HAL_UART_Receive_IT(object->gsm_uart, &uartBuffer.temp_val, 1) != HAL_OK)
	{
		object->uartFlag = 1 ;
	}

	_sendAT(object, "AT\r\n", 3000);

	//If your simcard havs a pincode, uncomment this line below
	//_sendAT(object, "AT+CPIN=2335\r\n", 5000);

	//HAL_Delay(15000);

	_tcpInit(object);
}

void _tcpInit(GSM_MQTT* object)
{
  switch (object->modemStatus)
  {
    case 0:
      {
        _sendAT(object, "+++", 1500);
        if(_sendAT(object, "AT\r\n", 3000) == 1)
        {
          object->modemStatus = 1;
        }
        else
        {
          object->modemStatus = 0;
          break;
        }
      }
      /* no break */
    case 1:
      {
        if(_sendAT(object, "ATE1\r\n", 3000) == 1)
        {
          object->modemStatus = 2;
        }
        else
        {
          object->modemStatus = 1;
          break;
        }
      }
      /* no break */
    case 2:
      {
        if (sendATreply(object, "AT+CREG?\r\n", "0,1", 5000) == 1)
        {
          _sendAT(object, "AT+CIPMUX=0\r\n", 2000);
          _sendAT(object, "AT+CIPMODE=1\r\n", 2000);
          if(sendATreply(object, "AT+CGATT?\r\n", ": 1", 4000) != 1)
          {
            _sendAT(object, "AT+CGATT=1\r\n", 2000);
          }
          object->modemStatus = 3;
          object->_tcpStatus = 2;
        }
        else
        {
          object->modemStatus = 2;
          break;
        }
      }
      /* no break */
    case 3:
      {
        if(object->GSM_ReplyFlag != 7)
        {
          object->_tcpStatus = sendATreply(object, "AT+CIPSTATUS\r\n", "STATE", 5000);
          if(object->_tcpStatusPrev == object->_tcpStatus)
          {
            object->tcpATerrorcount++;
            if(object->tcpATerrorcount >= 10)
            {
              object->tcpATerrorcount = 0;
              object->_tcpStatus = 7;
            }
          }
          else
          {
            object->_tcpStatusPrev = object->_tcpStatus;
            object->tcpATerrorcount = 0;
          }
        }
        object->_tcpStatusPrev = object->_tcpStatus;
        switch (object->_tcpStatus)
        {
          case 2:
            {
              /*_sendAT(object, "AT+CGDCONT=1,\"IP\",\"internet.telekom\"\r\n", 5000); //Only at first use
              serialWrite(object, "CGDCONT=1,\"IP\",\"") ;
              serialWrite(object, GSM_provider) ;
              _sendAT(object, "\"\r\n", 5000); */

              serialWrite(object, "AT+CSTT=\"") ;
              serialWrite(object, GSM_provider) ;
              _sendAT(object, "\"\r\n", 5000);
              break;
            }
          case 3:
            {
              _sendAT(object, "AT+CIICR\r\n", 5000);
              break;
            }
          case 4:
            {
              sendATreply(object, "AT+CIFSR\r\n", ".", 4000) ;
              break;
            }
          case 5:
            {
              serialWrite(object, "AT+CIPSTART=\"TCP\",\"");
              serialWrite(object, MQTT_HOST);
              serialWrite(object, "\",\"");
              serialWrite(object, MQTT_PORT);
              if(_sendAT(object, "\"\r\n", 5000) == 1)
              {
                unsigned long PrevMillis = millis();
                unsigned long currentMillis = millis();
                while ( (GSM_Response != 4) && ((currentMillis - PrevMillis) < 20000) )
                {
                  serialEvent();
                  currentMillis = millis();
                }
              }
              break;
            }
          case 6:
            {
              unsigned long PrevMillis = millis();
              unsigned long currentMillis = millis();
              while ( (GSM_Response != 4) && ((currentMillis - PrevMillis) < 20000) )
              {
                serialEvent();
                currentMillis = millis();
              }
              break;
            }
          case 7:
            {
              sendATreply(object, "AT+CIPSHUT\r\n", "OK", 4000) ;
              object->modemStatus = 0;
              object->_tcpStatus = 2;
              break;
            }
        }
      }
  }
}

void serialEvent()
{
  while(serialAvailable(&MQTT ,&uartBuffer))
    if (MQTT.TCP_Flag == false)
    {
      char inChar = serialRead(&uartBuffer);
      if (MQTT.index < 200)
      {
        MQTT.inputString[MQTT.index++] = inChar;
      }
      if (inChar == '\n')
      {
        MQTT.inputString[MQTT.index] = 0;
        stringComplete = true;
        //softLog(MQTT.inputString);
        if (strstr(MQTT.inputString, MQTT.reply) != NULL)
        {
          MQTT.GSM_ReplyFlag = 1;
          if (strstr(MQTT.inputString, " INITIAL") != 0)
          {
            MQTT.GSM_ReplyFlag = 2;
          }
          else if (strstr(MQTT.inputString, " START") != 0)
          {
            MQTT.GSM_ReplyFlag = 3;
          }
          else if (strstr(MQTT.inputString, "IP CONFIG") != 0)
          {
            HAL_Delay(1);
            MQTT.GSM_ReplyFlag = 4;
          }
          else if (strstr(MQTT.inputString, " GPRSACT") != 0)
          {
            MQTT.GSM_ReplyFlag = 4;
          }
          else if ((strstr(MQTT.inputString, " STATUS") != 0) || (strstr(MQTT.inputString, "TCP CLOSED") != 0))
          {
            MQTT.GSM_ReplyFlag = 5;
          }
          else if (strstr(MQTT.inputString, " TCP CONNECTING") != 0)
          {
            MQTT.GSM_ReplyFlag = 6;
          }
          else if ((strstr(MQTT.inputString, " CONNECT OK") != 0) || (strstr(MQTT.inputString, "CONNECT FAIL") != NULL) || (strstr(MQTT.inputString, "PDP DEACT") != 0))
          {
            MQTT.GSM_ReplyFlag = 7;
          }
        }
        else if (strstr(MQTT.inputString, "OK") != NULL)
        {
          GSM_Response = 1;
        }
        else if (strstr(MQTT.inputString, "ERROR") != NULL)
        {
          GSM_Response = 2;
        }
        else if (strstr(MQTT.inputString, ".") != NULL)
        {
          GSM_Response = 3;
        }
        else if (strstr(MQTT.inputString, "CONNECT FAIL") != NULL)
        {
          GSM_Response = 5;
        }
        else if (strstr(MQTT.inputString, "CONNECT") != NULL)
        {
          GSM_Response = 4;
          MQTT.TCP_Flag = true;
          //softLogLn("MQTT.TCP_Flag = True");
          AutoConnect(&MQTT);
          MQTT.pingFlag = true;
          MQTT.tcpATerrorcount = 0;
        }
        else if (strstr(MQTT.inputString, "CLOSED") != NULL)
        {
          GSM_Response = 4;
          MQTT.TCP_Flag = false;
          MQTT.MQTT_Flag = false;
        }
        MQTT.index = 0;
        MQTT.inputString[0] = 0;
      }
    }
    else
    {
      char inChar = serialRead(&uartBuffer);
      uint8_t ReceivedMessageType = (inChar / 16) & 0x0F;
      uint8_t QoS = (inChar & QoS_Mask) / QoS_Scale; //DUP and QoS settings
      uint8_t RETAIN = (inChar & RETAIN_Mask);
      if ((ReceivedMessageType >= CONNECT) && (ReceivedMessageType <= DISCONNECT))
      {
        bool NextLengthByte = true;
        MQTT.length = 0;
        MQTT.lengthLocal = 0;
        uint32_t multiplier=1;
        HAL_Delay(2);
        char Cchar = inChar;
        while ( (NextLengthByte == true) && (MQTT.TCP_Flag == true))
        {
          if (serialAvailable(&MQTT, &uartBuffer))
          {
            inChar = serialRead(&uartBuffer);
            ////softLogSin(inChar, 1);
            if ((((Cchar & 0xFF) == 'C') && ((inChar & 0xFF) == 'L') && (MQTT.length == 0)) || (((Cchar & 0xFF) == '+') && ((inChar & 0xFF) == 'P') && (MQTT.length == 0)))
            {
              MQTT.index = 0;
              MQTT.inputString[MQTT.index++] = Cchar;
              MQTT.inputString[MQTT.index++] = inChar;
              MQTT.TCP_Flag = false;
              MQTT.MQTT_Flag = false;
              MQTT.pingFlag = false;
              //softLogLn("Disconnecting");
            }
            else
            {
              if ((inChar & 128) == 128)
              {
                MQTT.length += (inChar & 127) *  multiplier;
                multiplier *= 128;
                //softLogLn("More");
              }
              else
              {
                NextLengthByte = false;
                MQTT.length += (inChar & 127) *  multiplier;
                multiplier *= 128;
              }
            }
          }
        }
        MQTT.lengthLocal = MQTT.length;
        //softLogSinLn(MQTT.length);
        if (MQTT.TCP_Flag == true)
        {
          printMessageType(ReceivedMessageType);
          MQTT.index = 0L;
          uint32_t a = 0;
          while ((MQTT.length-- > 0) && (serialAvailable(&MQTT, &uartBuffer)))
          {
            MQTT.inputString[MQTT.index++] = serialRead(&uartBuffer);
            HAL_Delay(1);
          }
          //softLogLn(" ");
          if (ReceivedMessageType == CONNACK)
          {
            MQTT.ConnectionAcknowledgement = MQTT.inputString[0] * 256 + MQTT.inputString[1];
            if (MQTT.ConnectionAcknowledgement == 0)
            {
              MQTT.MQTT_Flag = true;
              OnConnect(&MQTT);
            }
            printConnectAck(MQTT.ConnectionAcknowledgement);
            // MQTT.OnConnect();
          }
          else if (ReceivedMessageType == PUBLISH)
          {
            uint32_t TopicLength = (MQTT.inputString[0]) * 256 + (MQTT.inputString[1]);
            //softLog("Topic : '");
            MQTT.PublishIndex = 0;
            if(TopicLength > TOPIC_BUFFER_LENGTH)
            {
            	disconnect(&MQTT);
            	AutoConnect(&MQTT);
            }
            for (uint32_t iter = 2; iter < TopicLength + 2; iter++)
            {
              //softLog(MQTT.inputString[iter], 0);
              MQTT.Topic[MQTT.PublishIndex++] = MQTT.inputString[iter];
            }
            MQTT.Topic[MQTT.PublishIndex] = 0;
            //softLog("' \r\n Message :'");
            MQTT.TopicLength = MQTT.PublishIndex;

            MQTT.PublishIndex = 0;
            uint32_t MessageSTART = TopicLength + 2UL;
            int MessageID = 0;
            if (QoS != 0)
            {
              MessageSTART += 2;
              MessageID = MQTT.inputString[TopicLength + 2UL] * 256 + MQTT.inputString[TopicLength + 3UL];
            }
            if(MQTT.lengthLocal > MESSAGE_BUFFER_LENGTH)
            {
            	disconnect(&MQTT);
            	AutoConnect(&MQTT);
            }
            for (uint32_t iter = (MessageSTART); iter < (MQTT.lengthLocal); iter++)
            {
              //softLog(MQTT.inputString[iter]);
              MQTT.Message[MQTT.PublishIndex++] = MQTT.inputString[iter];
            }
            MQTT.Message[MQTT.PublishIndex] = 0;
            //softLogLn("'");
            MQTT.MessageLength = MQTT.PublishIndex;
            if (QoS == 1)
            {
              publishACK(&MQTT, MessageID);
            }
            else if (QoS == 2)
            {
              publishREC(&MQTT, MessageID);
            }
            OnMessage(MQTT.Topic, MQTT.TopicLength, MQTT.Message, MQTT.MessageLength);
            MQTT.MessageFlag = true;
          }
          else if (ReceivedMessageType == PUBREC)
          {
            //softLog("Message ID :");
            publishREL(&MQTT, 0, MQTT.inputString[0] * 256 + MQTT.inputString[1]);
            //softLogSinLn(MQTT.inputString[0] * 256 + MQTT.inputString[1]);

          }
          else if (ReceivedMessageType == PUBREL)
          {
            //softLog("Message ID :");
            publishCOMP(&MQTT, MQTT.inputString[0] * 256 + MQTT.inputString[1]);
            //softLogSinLn(MQTT.inputString[0] * 256 + MQTT.inputString[1]);

          }
          else if ((ReceivedMessageType == PUBACK) || (ReceivedMessageType == PUBCOMP) || (ReceivedMessageType == SUBACK) || (ReceivedMessageType == UNSUBACK))
          {
            //softLog("Message ID :");
            //softLogSinLn(MQTT.inputString[0] * 256 + MQTT.inputString[1]) ;
          }
          else if (ReceivedMessageType == PINGREQ)
          {
            MQTT.TCP_Flag = false;
            MQTT.pingFlag = false;
            //softLogLn("Disconnecting");
            sendATreply(&MQTT, "AT+CIPSHUT\r\n", ".", 4000) ;
            MQTT.modemStatus = 0;
          }
          else if (ReceivedMessageType == PINGRESP)
          {
        	  MQTT.respFlag = true;
          }
        }
      }
      else if ((inChar = 13) || (inChar == 10))
      {
      }
      else
      {
        //softLog("Received :Unknown Message Type :", 0);
        //softLogLn(inChar);
      }
    }
}
